# alcyone

./: README.md
main/: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  INSTRUCTIONS  INSTRUCTIONS.txt  Manager.cpp  Ship.cpp  Ship.h  Spaceship.cpp  Spaceship.h  a.out  build_and_run.sh  main.cpp  prog  testing.cpp
main/include/: Bullet.h  Manager.h  Particle.h  Ship.h  Utils.h
main/resources/: INFO.txt
main/src/: Manager.cpp  Particle.cpp  Ship.cpp  Utils.cpp  main.cpp
